--- a/Telegram/Resources/langs/lang_it.strings
+++ b/Telegram/Resources/langs/lang_it.strings
@@ -19,10 +19,10 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 
 "lng_disable_notifications_from_tray" = "Disattiva notifiche";
 "lng_enable_notifications_from_tray" = "Attiva notifiche";
-"lng_open_from_tray" = "Apri Telegram";
+"lng_open_from_tray" = "Apri Bettergram";
 "lng_minimize_to_tray" = "Riduci a icona";
-"lng_quit_from_tray" = "Chiudi Telegram";
-"lng_tray_icon_text" = "Telegram è ancora attivo qui,\npuoi cambiarlo nelle impostazioni.\nSe l'icona di notifica scompare,\npuoi ripristinarla dalle icone nascoste.";
+"lng_quit_from_tray" = "Chiudi Bettergram";
+"lng_tray_icon_text" = "Bettergram è ancora attivo qui,\npuoi cambiarlo nelle impostazioni.\nSe l'icona di notifica scompare,\npuoi ripristinarla dalle icone nascoste.";
 
 "lng_month1" = "Gennaio";
 "lng_month2" = "Febbraio";
@@ -156,7 +156,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_pinned_unpin" = "Togli";
 "lng_pinned_notify" = "Notifica tutti i membri";
 
-"lng_intro_about" = "Benvenuti nell'app desktop ufficiale Telegram Desktop.\nÈ veloce e sicura.";
+"lng_intro_about" = "Benvenuti nell'app desktop ufficiale Bettergram.\nÈ veloce e sicura.";
 "lng_start_msgs" = "INIZIA A MESSAGGIARE";
 
 "lng_intro_next" = "AVANTI";
@@ -234,7 +234,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_contacts_loading" = "Carico...";
 "lng_contacts_not_found" = "Nessun contatto trovato";
 "lng_dlg_search_for_messages" = "Cerca messaggi";
-"lng_update_telegram" = "Aggiorna Telegram";
+"lng_update_telegram" = "Aggiorna Bettergram";
 "lng_dlg_search_in" = "Cerca messaggi in";
 "lng_dlg_search_from" = "Da: {user}";
 
@@ -288,7 +288,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_settings_section_general" = "Generali";
 "lng_settings_change_lang" = "Cambia lingua";
 "lng_languages" = "Lingue";
-"lng_sure_save_language" = "Telegram si riavvierà per cambiare lingua";
+"lng_sure_save_language" = "Bettergram si riavvierà per cambiare lingua";
 "lng_settings_update_automatically" = "Aggiorna automaticamente";
 "lng_settings_current_version_label" = "Versione {version}:";
 "lng_settings_current_version" = "Versione {version}";
@@ -301,9 +301,9 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_settings_update_fail" = "Ricerca aggiornamenti fallita :(";
 "lng_settings_workmode_tray" = "Mostra icona nell'area di notifica";
 "lng_settings_workmode_window" = "Mostra icona nella barra applicazioni";
-"lng_settings_auto_start" = "Avvia Telegram all'avvio del sistema";
+"lng_settings_auto_start" = "Avvia Bettergram all'avvio del sistema";
 "lng_settings_start_min" = "Avvia ridotto a icona";
-"lng_settings_add_sendto" = "Inserisci Telegram nel menù «Invia a»";
+"lng_settings_add_sendto" = "Inserisci Bettergram nel menù «Invia a»";
 "lng_settings_section_scale" = "Scala interfaccia";
 "lng_settings_scale_auto" = "Auto ({cur})";
 
@@ -336,7 +336,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_download_path_default" = "cartella predefinita";
 "lng_download_path_clear" = "Elimina tutto";
 "lng_download_path_header" = "Scegli il percorso di download";
-"lng_download_path_default_radio" = "Cartella Telegram in «Download»";
+"lng_download_path_default_radio" = "Cartella Bettergram in «Download»";
 "lng_download_path_temp_radio" = "Cartella temporanea, pulita quando esci";
 "lng_download_path_dir_radio" = "Cartella personalizzata, pulita a mano";
 "lng_download_path_choose" = "Scegli il percorso di download";
@@ -383,7 +383,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_passcode_enter_first" = "Inserisci un codice";
 "lng_passcode_enter_new" = "Inserisci il nuovo codice";
 "lng_passcode_confirm_new" = "Reinserisci il nuovo codice";
-"lng_passcode_about" = "Quando è attivo un codice, appare un'icona col lucchetto sopra la lista delle chat. Premila per bloccare l'app.\n\nNota: se dimentichi il codice, dovrai accedere di nuovo su Telegram Desktop.";
+"lng_passcode_about" = "Quando è attivo un codice, appare un'icona col lucchetto sopra la lista delle chat. Premila per bloccare l'app.\n\nNota: se dimentichi il codice, dovrai accedere di nuovo su Bettergram.";
 "lng_passcode_differ" = "I codici sono diversi";
 "lng_passcode_wrong" = "Codice errato";
 "lng_passcode_is_same" = "Il codice non è stato cambiato";
@@ -700,7 +700,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_sure_delete_group" = "Sicuro di voler eliminare questo gruppo? Tutti i membri verranno rimossi e i messaggi verranno persi.";
 
 "lng_message_empty" = "Messaggio vuoto";
-"lng_message_unsupported" = "Questo messaggio non è supportato dalla tua versione di Telegram Desktop. Per favore, aggiorna all'ultima versione dalle Impostazioni o installalo da {link}";
+"lng_message_unsupported" = "Questo messaggio non è supportato dalla tua versione di Bettergram Desktop. Per favore, aggiorna all'ultima versione dalle Impostazioni o installalo da {link}";
 
 "lng_duration_seconds#one" = "{count} secondo";
 "lng_duration_seconds#other" = "{count} secondi";
@@ -829,8 +829,8 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_cancel_edit_post_yes" = "Sì";
 "lng_cancel_edit_post_no" = "No";
 
-"lng_bot_share_location_unavailable" = "Spiacenti, la condivisione della posizione non è al momento disponibile su Telegram Desktop.";
-"lng_bot_inline_geo_unavailable" = "Spiacenti, questo bot richiede la condivisione della posizione. Non è disponibile su Telegram Desktop.";
+"lng_bot_share_location_unavailable" = "Spiacenti, la condivisione della posizione non è al momento disponibile su Bettergram Desktop.";
+"lng_bot_inline_geo_unavailable" = "Spiacenti, questo bot richiede la condivisione della posizione. Non è disponibile su Bettergram Desktop.";
 "lng_bot_share_phone" = "Condividere il numero di telefono?";
 "lng_bot_share_phone_confirm" = "Condividi";
 
@@ -1218,7 +1218,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 
 "lng_new_authorization" = "{name},\nAbbiamo rilevato un accesso al tuo account da un nuovo dispositivo {day}, {date} alle {time}\n\nDispositivo: {device}\nPosizione: {location}\n\nSe non sei tu, puoi andare nelle Impostazioni – Mostra tutte le sessioni e terminare quella sessione.\n\nSe credi che qualcuno si sia collegato al tuo account contro il tuo volere, puoi attivare la verifica in due passaggi nelle Impostazioni. \n\nCordiali saluti, \nil team di Telegram";
 
-"lng_new_version_wrap" = "Telegram Desktop si è aggiornato alla versione {version}\n\n{changes}\n\nLa cronologia degli aggiornamenti è disponibile qui:\n{link}";
+"lng_new_version_wrap" = "Bettergram Desktop si è aggiornato alla versione {version}\n\n{changes}\n\nLa cronologia degli aggiornamenti è disponibile qui:\n{link}";
 "lng_new_version_minor" = "— Risoluzione di problemi e altri miglioramenti minori";
 "lng_new_version_text" = "— Videomessaggi migliorati: barra del progresso attorno al video durante la riproduzione, supporto picture-in-picture, conto alla rovescia per la durata.\n— Ora i messaggi vocali e i videomessaggi vengono riprodotti uno dopo l'altro";
 
@@ -1249,7 +1249,7 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_theme_editor_title" = "Modifica tavolozza dei colori";
 "lng_theme_editor_export_button" = "Esporta tema";
 
-"lng_payments_not_supported" = "Spiacenti, Telegram Desktop non supporta i pagamenti al momento. Per favore usa una delle nostre app mobili per fare questo.";
+"lng_payments_not_supported" = "Spiacenti, Bettergram Desktop non supporta i pagamenti al momento. Per favore usa una delle nostre app mobili per fare questo.";
 "lng_payments_receipt_label" = "Ricevuta";
 "lng_payments_receipt_label_test" = "Ricevuta di test";
 "lng_payments_invoice_label" = "Fattura";
@@ -1456,12 +1456,12 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_mac_not_known_app" = "Non si sa se questa applicazione può aprire \"{file}\".";
 
 "lng_mac_menu_services" = "Servizi";
-"lng_mac_menu_hide_telegram" = "Nascondi {telegram}";
+"lng_mac_menu_hide_telegram" = "Nascondi Bettergram";
 "lng_mac_menu_hide_others" = "Nascondi altre";
 "lng_mac_menu_show_all" = "Mostra tutte";
 "lng_mac_menu_preferences" = "Preferenze...";
-"lng_mac_menu_quit_telegram" = "Esci da {telegram}";
-"lng_mac_menu_about_telegram" = "Informazioni su {telegram}";
+"lng_mac_menu_quit_telegram" = "Esci da Bettergram";
+"lng_mac_menu_about_telegram" = "Informazioni su Bettergram";
 "lng_mac_menu_file" = "File";
 "lng_mac_menu_logout" = "Esci";
 "lng_mac_menu_edit" = "Modifica";
@@ -1477,6 +1477,6 @@ https://github.com/telegramdesktop/tdesktop/blob/master/LEGAL
 "lng_mac_menu_add_contact" = "Aggiungi contatto";
 "lng_mac_menu_new_group" = "Nuovo gruppo";
 "lng_mac_menu_new_channel" = "Nuovo canale";
-"lng_mac_menu_show" = "Mostra Telegram";
+"lng_mac_menu_show" = "Mostra Bettergram";
 
 // Keys finished
